--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,11 @@ libmath ="0.2.1"
 rand = "0.8.5"
 aes-prng = "0.2.0"
 seahash ="4.1.0"
+
+crossbeam-channel = "0.5.6"
+parking_lot = "0.12.1"
+
+syncpool = "0.1.6"
+[dependencies.xxhash-rust]
+version = "0.8.5"
+features = ["xxh3", "const_xxh3"]
