--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,19 @@
 [package]
+authors = ["Behrouz <behrouz.r.fa@gmail.com>"]
 name = "memory-cache-rust"
 version = "0.1.0"
 edition = "2021"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+homepage = "https://github.com/behrouz-rfa/memory-cache-rust"
+repository = "https://github.com/behrouz-rfa/memory-cache-rust"
+documentation = "https://github.com/behrouz-rfa/memory-cache-rust"
+
+description = """
+memory-cache is a fast, concurrent cache library built with a focus on performance and correctness.
+The motivation to build Ristretto comes from the need for a contention-free cache in
+"""
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
