--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,29 @@ parking_lot = "0.12.1"
 seize = "0.2.1"
 syncpool = "0.1.6"
 concache= "0.2.1"
+num_cpus = "1.12.0"
+rayon = {version = "1.3", optional = true}
+
+
 [dependencies.xxhash-rust]
 version = "0.8.5"
 features = ["xxh3", "const_xxh3"]
+
+[dependencies.ahash]
+version = "0.7.6"
+default-features = false
+
+[dev-dependencies]
+rand = "0.8"
+rayon = "1.3"
+criterion = "0.3"
+
+[[bench]]
+name = "flurry_dashmap"
+harness = false
+
+[[bench]]
+name = "flurry_hashbrown"
+harness = false
+
 
