--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,13 @@ concache= "0.2.1"
 num_cpus = "1.12.0"
 rayon = {version = "1.3", optional = true}
 
+[dependencies.uuid]
+version = "1.2.2"
+features = [
+    "v4",                # Lets you generate random UUIDs
+    "fast-rng",          # Use a faster (but still sufficiently random) RNG
+    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
+]
 
 [dependencies.xxhash-rust]
 version = "0.8.5"
