--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ syncpool = "0.1.6"
 concache= "0.2.1"
 num_cpus = "1.12.0"
 rayon = {version = "1.3", optional = true}
+timer = "0.2.0"
+chrono = "0.4.23"
 
 [dependencies.uuid]
 version = "1.2.2"
