--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Behrouz <behrouz.r.fa@gmail.com>"]
 name = "memory-cache-rust"
-version = "0.1.1-beta.0"
+version = "0.1.0-alpha"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
