--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ memory-cache is a fast, concurrent cache library built with a focus on performan
 The motivation to build Ristretto comes from the need for a contention-free cache in
 """
 readme = "README.md"
-keywords = ["redis" ,"cache", "memoize" ,"caching" ,"lru","lfu","bloom"]
+keywords = ["cache","caching" ,"lru","lfu","bloom"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 license = "MIT"
